# postmask

./: README.md
.github/workflows/: rust.yml
demo/hospital/: migrate.sql
demo/hospital/nbproject/: genfiles.properties  project.properties
demo/hospital/src/hospital/: Database.java  Hospital.java
demo/hospital/src/hospital/Data/: Patient.java  PatientDiagnose.java  UserGroup.java
demo/hospital/src/hospital/View/: NewDiagnose.java  NewPatient.java  NewUserWithGroup.java  PatientDiagnoseList.java  PatientList.java
postmask/: Cargo.toml  postmask.control
postmask/src/: adding_noise.rs  destruction.rs  faking.rs  lib.rs  partial.rs  randomization.rs
postmask/src/faking_data/: first_names.txt  last_names.txt  middle_names.txt  provides.txt
usr/share/postgresql/extension/: postmask--0.0.0.sql  postmask.control
