[package]
name = "postmask"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg_test = []

[dependencies]
pgx = {version = "=0.7.2", features=["time-crate"]}
rand = "0.8.5"
time = "0.3.20"

[dev-dependencies]
pgx-tests = "=0.7.2"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
